--- a/frontend/Meny.html
+++ b/frontend/Meny.html
@@ -280,6 +280,9 @@
           <li><a class="link-item" href="./simskola/simskolegrupper/fisken-steg-2.html"><span class="link-title">Fisken steg 2</span><span class="path">simskola/simskolegrupper/fisken-steg-2.html</span></a></li>
           <li><a class="link-item" href="./simskola/simskolegrupper/hajen.html"><span class="link-title">Hajen</span><span class="path">simskola/simskolegrupper/hajen.html</span></a></li>
           <li><a class="link-item" href="./simskola/simskolegrupper/hammarhajen.html"><span class="link-title">Hammarhajen</span><span class="path">simskola/simskolegrupper/hammarhajen.html</span></a></li>
+          <li style="list-style:none;margin:4px 2px 2px 2px;border-top:1px dashed #b7d1e9;padding-top:6px;">
+            <span style="display:block;font-size:11px;font-weight:700;letter-spacing:0.04em;text-transform:uppercase;color:#6f8aa4;">Information och praktik</span>
+          </li>
           <li><a class="link-item" href="./simskola/tider-perioder.html"><span class="link-title">Tider och perioder</span><span class="path">simskola/tider-perioder.html</span></a></li>
           <li><a class="link-item" href="./simskola/fritidskortet.html"><span class="link-title">Fritidskortet</span><span class="path">simskola/fritidskortet.html</span></a></li>
           <li><a class="link-item" href="./simskola/avgifter.html"><span class="link-title">Avgifter</span><span class="path">simskola/avgifter.html</span></a></li>
