--- a/frontend/Kontakt/kontaktuppgifter.html
+++ b/frontend/Kontakt/kontaktuppgifter.html
@@ -90,17 +90,14 @@
         <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Relaterade sidor</h2>
         <p style="margin:0 0 12px 0;color:#2f4c61;font-size:14px;line-height:1.6;">Om du vill läsa mer om föreningen eller engagera dig.</p>
         <div style="display:flex;gap:10px;flex-wrap:wrap;">
-          <a href="https://www.ljungbyss.se/sida/?ID=591089" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;" target="_blank" rel="noopener noreferrer">Kontaktportal</a>
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576222" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Styrelsen</a>
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=50236" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Om klubben</a>
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161875" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Historia</a>
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576223" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Bli ledare</a>
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=590922" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Hjälp till i LSS</a>
+          <a href="https://www.ljungbyss.se/sida/?ID=591089" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;">Kontaktportal</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576222" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Styrelsen</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=50236" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Om klubben</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161875" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Historia</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576223" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Bli ledare</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=590922" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Hjälp till i LSS</a>
         </div>
       </section>
     </div>
   </div>
 </div>
-
-
-
