--- a/frontend/Kontakt/Styrelsen.html
+++ b/frontend/Kontakt/Styrelsen.html
@@ -20,7 +20,7 @@
         </div>
       </section>
 
-      <section style="display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:14px;">
+      <section style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:14px;">
         <article style="background:#fff;border:1px solid rgba(0,90,153,0.14);border-radius:18px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:16px;">
           <img src="https://cdn.sportadmin.se/699/h/253/3e64ae71baa068402026b3c27d9bc699d4a47933cd205047c9f0b88a0905c059_L.jpg" alt="Ulrika Bondeson Crene" style="width:100%;height:300px;object-fit:cover;object-position:center 28%;border-radius:12px;border:1px solid #dce9f5;">
           <h3 style="margin:12px 0 2px 0;color:#005a99;font-size:20px;line-height:1.25;">Ulrika Bondeson Crene</h3>
@@ -106,6 +106,3 @@
     </div>
   </div>
 </div>
-
-
-
